fixed word bubble overlap

--- a/perport.css
+++ b/perport.css
@@ -18,10 +18,10 @@ body {
     font-family: averia serif libre;
 }
 
-main {
+/* main {
     filter: opacity(0);
     animation: fade-in 1s ease-in-out 3s forwards;
-}
+} */
 
 @keyframes fade-in {
     0% {
